# fast-oculist

./: .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  i.html  mypy.ini  pyproject.toml  start.bash  stop.bat
RTSPtoWebRTC/: .gitignore  Dockerfile  README.md  config.json  go.mod  go.sum  http.go
RTSPtoWebRTC/web/static/js/: app.js  classifier.js
RTSPtoWebRTC/web/templates/: player.tmpl
app/: controls.py  index.py  main.py
app/api/: router.py
app/api/endpoint/: __init__.py  index.py
app/api/endpoint/camera/: camera.py
app/api/endpoint/navigator/: navigator.py  router.py
app/core/: log_config.py  settings.py
app/db/migrations/: env.py
app/db/models/: camera.py
app/services/devices/onvif_camera/: onvif_camera.py
app/services/devices/onvif_camera/schemas/: onvif_camera_info.py
app/services/navigator/: __init__.py  navigator.py
app/services/navigator/schemas/: __init__.py  location_calculation_request.py  navigation_point.py
app/static/css/: style.css
app/static/js/: camera.js  crosshair.js  fullscreen.js  index.js  map.js  observer.js  subject.js
app/static/js/camera/: cameraController.js  cameraSubject.js  enum.js
app/static/js/camera/observers/: compass.js  video.js
app/templates/: index.html
docs/: camera_proccess.wsd  camera_system.wsd  navigate.wsd
test_1/: database.db  database.py  models.py  objects_service.py  processing_service.py  run_services.py
tests/: test_main.py
